# jupyter-extension

./: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  install.json  package.json  pyproject.toml
.github/workflows/: build.yml  check-release.yml
assistant/: __init__.py  handler.py
src/: index.ts
src/__tests__/: assistant.spec.ts
ui-tests/: package.json
ui-tests/tests/: assistant.spec.ts
