[build-system]
requires = ["hatchling", "hatch-jupyter-builder"]
build-backend = "hatchling.build"

[project]
name = "jupyter-assistant-extension"
version = "0.1.0"
description = "A JupyterLab extension for assistant"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
authors = [
  {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "nodejs"

[tool.hatch.build.targets.sdist]
artifacts = ["assistant/labextension"]
exclude = [".github", "binder"]
